# DDI

./: .gitignore  app.R  run_app.ps1  static DDI code.txt
.github/scripts/: publish-github-release.mjs
.github/workflows/: desktop-tauri-windows.yml
app/: index.html  package-lock.json  package.json
app/deploy/: install-cloudflared.sh  run-prod.sh  start-prod.sh  start-public-url.sh  static-server.mjs  status-public-url.sh  stop-prod.sh  stop-public-url.sh
app/src/: App.css  App.tsx
app/src/components/: FieldComponents.tsx  IntermediateTab.tsx  LeftPanel.tsx  MoleculeViewer.tsx  ReportTab.tsx  SubstanceTab.tsx  SupportInfoTab.tsx  SystemTab.tsx  TransporterReportTab.tsx
app/src/hooks/: useAuth.tsx  useDDIStore.tsx
app/src/lib/: calculations.ts  data.ts  export.ts
app/src/pages/: Home.tsx  Login.tsx
app/src/types/: smiles-drawer.d.ts
desktop-tauri/: README.md  package-lock.json  package.json
desktop-tauri/scripts/: invoke-local-node.ps1  read-build-metadata.cjs  run-app-script.cjs  run-tauri-cli.cjs  stage-windows-artifacts.cjs
desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop-tauri/src-tauri/src/: lib.rs  main.rs
